2024 Theme: Stop meta content overflowing
Tutorials with many languages require the language list in the sidebar to be able to wrap.

--- a/wp-content/themes/pub/wporg-learn-2024/src/sensei-meta-list/style.scss
+++ b/wp-content/themes/pub/wporg-learn-2024/src/sensei-meta-list/style.scss
@@ -31,7 +31,6 @@
 
 		td {
 			text-align: end;
-			white-space: nowrap;
 		}
 
 		@media (max-width: 380px) {
